# nickel

./: .clang-format  Benchmarks.md  CMakeLists.txt  Readme.md  conanfile.py  index.html  version-selector.js
.ci/: update-version-selector-js.py
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test.cpp
.github/workflows/: ci.yml  conan.yml  docs.yml
0.0.2/: .buildinfo  genindex.html
0.0.2/_sources/: comparison.rst.txt
0.0.2/_sources/reference/: index.rst.txt
0.0.2/_sources/tutorial/: index.rst.txt
0.0.2/tutorial/: index.html
0.0.3/_sources/tutorial/: advanced.rst.txt
0.0.3/reference/: index.html
benchmarks/: CMakeLists.txt  bench.py  benchrunner.py  runner.py  visualize.py
benchmarks/buildbench/: many-names.cpp.bench  nargs-decl.cpp.bench  nargs-multiuse.cpp.bench  nargs-use.cpp.bench
cmake/: FindSphinx.cmake  TestCompileError.cmake  nickelConfig.cmake  test-compile-error.py
docs/: CMakeLists.txt  comparison.rst  conf.py  index.rst  motivation.rst  version-selector.js
docs/_templates/: layout.html
docs/reference/: index.rst
docs/tutorial/: ordinary-usage.rst
docs/website/: index.html  version-selector.js
include/nickel/: nickel.hpp
main/: .buildinfo  comparison.html  genindex.html  index.html  motivation.html  objects.inv  search.html  searchindex.js
main/_sources/: index.rst.txt
main/_sources/reference/: index.rst.txt
main/_sources/tutorial/: advanced.rst.txt  index.rst.txt  ordinary-usage.rst.txt
main/reference/: index.html
main/tutorial/: advanced.html  index.html  ordinary-usage.html
tests/: CMakeLists.txt
tests/compile_error/: missing_eval_void.test.cpp  steal.nonrvalue.test.cpp
tests/nickel/: default_args.test.cpp  kwargs.test.cpp  macros.test.cpp  multivalued.test.cpp  name_groups.test.cpp  nickel.test.cpp  stdfunction.segfault.test.cpp  steal.test.cpp
